<resources>
    <string name="app_name">QuizApp</string>
    <string name="register_here">Register Here</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="play_as_guest">Play as Guest</string>
    <string name="welcome_to_quiz_app">Welcome to Quiz App</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="play_button">play_button</string>
    <string name="eye">eye</string>
    <string name="login_page">Login Page</string>
    <string name="register_first">Register First</string>
    <string name="getall_users">GetAll Users</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="mobile">mobile</string>
    <string name="choose_catagory_for_quiz">Choose Catagory for Quiz</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="general_awareness">General Awareness</string>
    <string name="ga">GA</string>
    <string name="gk">GK</string>
    <string name="java_programming">Java Programming</string>
    <string name="c_programming">C++ Programming</string>
    <string name="cpp">CPP</string>
    <string name="dbms">DBMS</string>
    <string name="android">Android</string>
    <string name="ms_excel">MS Excel</string>
    <string name="power_point">Power Point</string>
    <string name="answer_carefully">Answer Carefully</string>
    <string name="question">question</string>
    <string name="option4">Option4</string>
    <string name="option3">Option3</string>
    <string name="option2">Option2</string>
    <string name="option1">Option1</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="q">Q.</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="ans">Ans:</string>
    <string name="answer">Answer</string>
    <string name="welcome_user">Welcome User</string>
    <string name="textview">TextView</string>
    <string name="error">Error</string>
    <string name="user_logo">User Logo</string>
    <string name="questionattempt">questionAttempt</string>
    <string name="question_attempted">Question Attempted</string>
    <string name="result">result</string>
    <string name="your_score">Your Score</string>
    <string name="replay">Replay</string>
    <string name="share">SHARE</string>
    <string name="category">CATEGORY</string>
</resources>