<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    tools:context=".Cpp_Activity">

    <LinearLayout
        android:padding="10sp"
        android:orientation="vertical"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessLeaf">

        <TextView
            android:id="@+id/textView6"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_carefully" />

        <TextView
            android:id="@+id/cpp_que"
            android:layout_margin="10sp"
            android:padding="5sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question" />

        <TextView
            android:id="@+id/cpp_opt1"
            android:layout_margin="10sp"
            android:textSize="17sp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option1" />

        <TextView
            android:id="@+id/cpp_opt2"
            android:layout_margin="10sp"
            android:textSize="17sp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option2" />

        <TextView
            android:id="@+id/cpp_opt3"
            android:layout_margin="10sp"
            android:textSize="17sp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option3" />

        <TextView
            android:id="@+id/cpp_opt4"
            android:layout_margin="10sp"
            android:textSize="17sp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option4" />

        <TextView
            android:id="@+id/cpp_ans"
            android:layout_margin="10sp"
            android:textSize="17sp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer" />

        <LinearLayout
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cpp_pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous" />

            <Button
                android:id="@+id/cpp_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>