<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginHorizontal="10sp"
    android:layout_marginBottom="10sp"
    android:padding="10sp"
    android:layout_marginTop="30sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/answer_carefully"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/user_logo"
            android:layout_width="60sp"
            android:layout_height="60sp"/>
        <TextView
            android:textAlignment="textEnd"
            android:gravity="center"
            android:text="@string/welcome_user"
            android:layout_weight="1"
            android:layout_width="0sp"
            android:layout_height="60sp"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300sp">
        <LinearLayout
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/q"
                android:clickable="false"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="30sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/question"
                android:clickable="false"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="20sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/_1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="30sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/option1"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option1" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="20sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/_2"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="30sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/option2"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option2" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="20sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/_3"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="30sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/option3"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option3" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="20sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/_4"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="30sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/option4"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option4" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:textStyle="bold"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/answer"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>