<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10sp"
    android:layout_marginBottom="10sp"
    tools:context=".QuestionActivity">

    <LinearLayout
        android:layout_marginTop="25sp"
        android:layout_marginHorizontal="10sp"
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="0sp"
                android:layout_height="80sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/user_logo"
                android:src="@drawable/user_logo" />

            <TextView
                android:id="@+id/que_attempt"
                android:layout_width="0dp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/question_attempted"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/que_username"
                style="bold"
                android:layout_width="0dp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/username"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/answer_carefully"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <LinearLayout
            android:background="@drawable/rounded_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/q"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/que_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/question"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/rounded_corners_option"
            android:layout_margin="5sp"
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/que_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option1"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/rounded_corners_option"
            android:layout_margin="5sp"
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/que_option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option2"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_option"
            android:layout_margin="5sp"
            android:padding="5sp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/que_option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option3"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_option"
            android:layout_margin="5sp"
            android:padding="5sp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/que_option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option4"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_option"
            android:layout_margin="5sp"
            android:padding="5sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/que_ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="600dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/que_pre"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/previous"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/que_next"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/next"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>