<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/pista1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    tools:context=".Login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:textColor="@color/dark_blue1"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/textView"
            android:layout_width="200sp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/login_page" />
        <ImageView
            android:contentDescription="@string/login_page"
            android:src="@drawable/login4"
            android:layout_gravity="center"
            android:layout_width="200sp"
            android:layout_height="200sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="220sp"
        android:layout_marginHorizontal="40sp"
        android:padding="20sp"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:textColorHint="@color/dark_blue1"
            android:layout_margin="5sp"
            android:textSize="20sp"
            android:id="@+id/et_username"
            android:layout_width="250sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:inputType="textAutoComplete"
            android:hint="@string/enter_username" />

        <EditText
            android:textColorHint="@color/dark_blue1"
            android:layout_margin="5sp"
            android:textSize="20sp"
            android:autofillHints="password"
            android:hint="@string/enter_password"
            android:id="@+id/editTextTextPassword"
            android:layout_width="250sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:layout_margin="5sp"
            android:id="@+id/button3"
            android:layout_width="200sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/register" />



        <LinearLayout
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/dark_blue1"
                android:textSize="15sp"
                android:id="@+id/textView3"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register_first" />
            <TextView
                android:textColor="@color/dark_blue1"
                android:textSize="15sp"
                android:layout_weight="1"
                android:id="@+id/textView5"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:text="@string/play_as_guest" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>